--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,27 @@
 spring.application.name=fujao-api
 
-spring.datasource.url=jdbc:mysql://mysql:57f4f5106790cef0e079@easypanel.rafaelcoelho.shop:3309/projeto_wellynton
+spring.datasource.url=jdbc:mysql://easypanel.rafaelcoelho.shop:3309/projeto_wellynton?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo&connectTimeout=30000&socketTimeout=60000&autoReconnect=true&failOverReadOnly=false&maxReconnects=3&useLocalSessionState=true
 spring.datasource.username=mysql
 spring.datasource.password=57f4f5106790cef0e079
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.auto-commit=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.ormat_sql=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.jpa.open-in-view=false
+spring.transaction.default-timeout=30
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=coelho180305@gmail.com
+spring.mail.password=ciox lwjg delx qapx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
